# msm5232_like_vst

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/app/: render_main.cpp
src/dsp/: adsr.cpp  adsr.h  bandlimited.cpp  bandlimited.h  msm5232_wavetable.cpp  msm5232_wavetable.h  synth.cpp  synth.h  voice.cpp  voice.h
src/vst3/: PluginController.cpp  PluginProcessor.cpp  factory.cpp
